{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1479,
  "lineage": "b68d17eb-fafc-7839-307b-b2fc0bc8e19f",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_elb",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/prod1-bastion",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b",
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod1-bastion-1008848114.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:22",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "prod1-bastion",
            "idle_timeout": 60,
            "instances": [
              "i-03f79773ed24e5b37"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 22,
                "instance_protocol": "tcp",
                "lb_port": 22,
                "lb_protocol": "tcp"
              }
            ],
            "name": "prod1-bastion",
            "security_groups": [
              "sg-07fc9f96c4ea8e63e"
            ],
            "source_security_group": "686255952373/prod1-bastion",
            "source_security_group_id": "sg-07fc9f96c4ea8e63e",
            "subnets": [
              "subnet-01dfe72b26a280af7",
              "subnet-05fd3f124c539fc15",
              "subnet-07bd5c9ccf05380af"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-07fc9f96c4ea8e63e",
            "description": "Allow only inbound ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fc9f96c4ea8e63e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod1-bastion",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eliza",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eliza",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-04b30704905ed8d9d",
            "description": "Allow inbound eliza traffic and mgmt ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b30704905ed8d9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fc9f96c4ea8e63e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod1-eliza",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod1-eliza"
            },
            "tags_all": {
              "Name": "prod1-eliza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-02dda0c8c59424207",
            "dns_entry": [
              {
                "dns_name": "vpce-02dda0c8c59424207-chmhrl7b.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02dda0c8c59424207-chmhrl7b-eu-central-1c.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02dda0c8c59424207-chmhrl7b-eu-central-1a.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02dda0c8c59424207-chmhrl7b-eu-central-1b.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z072035418RKEZFK8JWJP"
              },
              {
                "dns_name": "ec2.eu-central-1.api.aws",
                "hosted_zone_id": "Z07134041K0EYZL49Q7NK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02dda0c8c59424207",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0217b4be864440392",
              "eni-0579fab81860fc004",
              "eni-063664f25d22f9f08"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d0b210f2c5416a04"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.12.200",
                "subnet_id": "subnet-0c69f42d43ae6d227"
              },
              {
                "ipv4": "10.0.38.239",
                "subnet_id": "subnet-024cee6e3a97b9ac3"
              },
              {
                "ipv4": "10.0.92.251",
                "subnet_id": "subnet-05d21b7934d74e428"
              }
            ],
            "subnet_ids": [
              "subnet-024cee6e3a97b9ac3",
              "subnet-05d21b7934d74e428",
              "subnet-0c69f42d43ae6d227"
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-ec2-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-ec2-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-00a9bf7b5e7e24467",
            "dns_entry": [
              {
                "dns_name": "vpce-00a9bf7b5e7e24467-8botkmay.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-00a9bf7b5e7e24467-8botkmay-eu-central-1b.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-00a9bf7b5e7e24467-8botkmay-eu-central-1c.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-00a9bf7b5e7e24467-8botkmay-eu-central-1a.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "kms.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z09441312L6XFHMYTKSYB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00a9bf7b5e7e24467",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0170bf4abc1bed7cf",
              "eni-083d10d927eb9df95",
              "eni-0f88ba0441d709e30"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d0b210f2c5416a04"
            ],
            "service_name": "com.amazonaws.eu-central-1.kms",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.19.9",
                "subnet_id": "subnet-0c69f42d43ae6d227"
              },
              {
                "ipv4": "10.0.39.43",
                "subnet_id": "subnet-024cee6e3a97b9ac3"
              },
              {
                "ipv4": "10.0.81.200",
                "subnet_id": "subnet-05d21b7934d74e428"
              }
            ],
            "subnet_ids": [
              "subnet-024cee6e3a97b9ac3",
              "subnet-05d21b7934d74e428",
              "subnet-0c69f42d43ae6d227"
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-kms-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-kms-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-067b32aaead6c6953",
            "dns_entry": [
              {
                "dns_name": "vpce-067b32aaead6c6953-84whx64i.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-067b32aaead6c6953-84whx64i-eu-central-1c.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-067b32aaead6c6953-84whx64i-eu-central-1a.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-067b32aaead6c6953-84whx64i-eu-central-1b.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "secretsmanager.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z03603871S1ZGOM1K05AW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-067b32aaead6c6953",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02a1d3ea50c8e35fd",
              "eni-0a878d6496011079d",
              "eni-0c189f0e71dd07b37"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d0b210f2c5416a04"
            ],
            "service_name": "com.amazonaws.eu-central-1.secretsmanager",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.13.182",
                "subnet_id": "subnet-0c69f42d43ae6d227"
              },
              {
                "ipv4": "10.0.40.220",
                "subnet_id": "subnet-024cee6e3a97b9ac3"
              },
              {
                "ipv4": "10.0.94.173",
                "subnet_id": "subnet-05d21b7934d74e428"
              }
            ],
            "subnet_ids": [
              "subnet-024cee6e3a97b9ac3",
              "subnet-05d21b7934d74e428",
              "subnet-0c69f42d43ae6d227"
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-secretsmanager-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-secretsmanager-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-0bd8e257077ab2b97",
            "dns_entry": [
              {
                "dns_name": "vpce-0bd8e257077ab2b97-sua5x5ga.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0bd8e257077ab2b97-sua5x5ga-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0bd8e257077ab2b97-sua5x5ga-eu-central-1c.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0bd8e257077ab2b97-sua5x5ga-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z05284112ZQJD7AD9GC4N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bd8e257077ab2b97",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07e87e51147794fbd",
              "eni-09549a537cec91414",
              "eni-0ba4d9c68fd049beb"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d0b210f2c5416a04"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.28.79",
                "subnet_id": "subnet-0c69f42d43ae6d227"
              },
              {
                "ipv4": "10.0.58.182",
                "subnet_id": "subnet-024cee6e3a97b9ac3"
              },
              {
                "ipv4": "10.0.88.120",
                "subnet_id": "subnet-05d21b7934d74e428"
              }
            ],
            "subnet_ids": [
              "subnet-024cee6e3a97b9ac3",
              "subnet-05d21b7934d74e428",
              "subnet-0c69f42d43ae6d227"
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-ssm-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-ssm-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0911e41a05d0d2432",
            "description": "Allow inbound nginx traffic and mgmt ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0911e41a05d0d2432",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fc9f96c4ea8e63e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fc9f96c4ea8e63e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "prod1-nginx",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod1-nginx-80a-443a-22b-0x"
            },
            "tags_all": {
              "Name": "prod1-nginx-80a-443a-22b-0x"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nginx.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/prod1-nginx/bcce85f9c421b209",
            "arn_suffix": "app/prod1-nginx/bcce85f9c421b209",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod1-nginx-57063146.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/prod1-nginx/bcce85f9c421b209",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod1-nginx",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0911e41a05d0d2432"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01dfe72b26a280af7"
              },
              {
                "subnet_id": "subnet-05fd3f124c539fc15"
              },
              {
                "subnet_id": "subnet-07bd5c9ccf05380af"
              }
            ],
            "subnets": [
              "subnet-01dfe72b26a280af7",
              "subnet-05fd3f124c539fc15",
              "subnet-07bd5c9ccf05380af"
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prod1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prod1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.nginx.aws_security_group.nginx",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:listener/app/prod1-nginx/bcce85f9c421b209/819298de2f8be4e2",
            "certificate_arn": "arn:aws:acm:eu-central-1:686255952373:certificate/29c6e2bd-b6d5-425c-95f2-4e7b030ec14a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:targetgroup/prod1-nginx/a111d8117a028536",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:listener/app/prod1-nginx/bcce85f9c421b209/819298de2f8be4e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/prod1-nginx/bcce85f9c421b209",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "prod1",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.nginx.aws_security_group.nginx",
            "module.nginx.data.aws_route53_zone.zone",
            "module.nginx.module.acm.aws_acm_certificate.this",
            "module.nginx.module.acm.aws_acm_certificate_validation.this",
            "module.nginx.module.acm.aws_route53_record.validation",
            "module.nginx.module.alb.aws_lb.this",
            "module.nginx.module.alb.aws_lb_target_group.main",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:targetgroup/prod1-nginx/a111d8117a028536",
            "arn_suffix": "targetgroup/prod1-nginx/a111d8117a028536",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:targetgroup/prod1-nginx/a111d8117a028536",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/prod1-nginx/bcce85f9c421b209"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod1-nginx",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prod1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prod1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.provisioner",
      "mode": "data",
      "type": "aws_subnet",
      "name": "first_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-0c69f42d43ae6d227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 8182,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c69f42d43ae6d227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          }
        }
      ]
    },
    {
      "module": "module.provisioner",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_outbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-02a7735f404eebc49",
            "description": "Allow all outbound traffic for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a7735f404eebc49",
            "ingress": [],
            "name": "prod1-provisioner-outbound",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod1",
              "Name": "prod1-provisioner-outbound"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prod1-provisioner-outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.provisioner.data.aws_subnet.first_subnet",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-04d3b3a495f7fd6df",
            "description": "Security Group that allows internal aws services to hit RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d3b3a495f7fd6df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Bastion to connect to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fc9f96c4ea8e63e"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow Nomad cluster to connect to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e27a798a2743ef96"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Self-referencing",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "prod1-eliza-sg",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod1-eliza-sg"
            },
            "tags_all": {
              "Name": "prod1-eliza-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-086565d9965cc9eff",
            "description": "All required ports for Consul are allowed for members of the security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-086565d9965cc9eff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 21000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 21255
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8600
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8600
              }
            ],
            "name": "prod1-consul",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0d0b210f2c5416a04",
            "description": "Allow inbound traffic to self referencign group",
            "egress": [],
            "id": "sg-0d0b210f2c5416a04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "prod1-endpoint",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod1",
              "Name": "prod1-endpoint",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prod1-endpoint",
              "Terraform": "UsePrism/eliza-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0e27a798a2743ef96",
            "description": "All required ports for nomad are allowed for members of the security group",
            "egress": [],
            "id": "sg-0e27a798a2743ef96",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 20000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 32000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 20000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 32000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4646
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4647,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4647
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4648,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4648
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4648,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 4648
              }
            ],
            "name": "prod1-nomad",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0c564731a76b96c6f",
            "description": "All required ports for vault are allowed for members of the security group",
            "egress": [],
            "id": "sg-0c564731a76b96c6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8201
              }
            ],
            "name": "prod1-vault",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-2589683010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086565d9965cc9eff",
            "security_group_rule_id": "sgr-0f0b66e805542e54a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-1040502445",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-086565d9965cc9eff",
            "security_group_rule_id": "sgr-0d4a84ada5a54a3c6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_http_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8500,
            "id": "sgrule-512194088",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086565d9965cc9eff",
            "security_group_rule_id": "sgr-08db21fa5b7f310db",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_rpc_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8300,
            "id": "sgrule-1056945586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086565d9965cc9eff",
            "security_group_rule_id": "sgr-0cc52bf1a16c3a0fa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_serf_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8300,
            "id": "sgrule-1038019030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086565d9965cc9eff",
            "security_group_rule_id": "sgr-0786c8b3f4ac9b026",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_serf_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-1905711768",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-086565d9965cc9eff",
            "security_group_rule_id": "sgr-029c2137e8a4b8599",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_sidecar_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 21000,
            "id": "sgrule-2398643311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086565d9965cc9eff",
            "security_group_rule_id": "sgr-014e6e8ce4556c074",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 21255,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_dynamic_ports_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 20000,
            "id": "sgrule-3340082593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e27a798a2743ef96",
            "security_group_rule_id": "sgr-0d3b8a8e1bc7867ac",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_dynamic_ports_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 20000,
            "id": "sgrule-1665809998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e27a798a2743ef96",
            "security_group_rule_id": "sgr-0bf9f094b9a25b622",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_http_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4646,
            "id": "sgrule-602902071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e27a798a2743ef96",
            "security_group_rule_id": "sgr-0a0bbd8b953db5b80",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4646,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_rpc_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4647,
            "id": "sgrule-1586022915",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e27a798a2743ef96",
            "security_group_rule_id": "sgr-094627346b800314a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4647,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_serf_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4648,
            "id": "sgrule-2853518828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e27a798a2743ef96",
            "security_group_rule_id": "sgr-0719a921bc74394ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4648,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_serf_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4648,
            "id": "sgrule-239771139",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e27a798a2743ef96",
            "security_group_rule_id": "sgr-03437141ae2c68009",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4648,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_client_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8200,
            "id": "sgrule-3671074987",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c564731a76b96c6f",
            "security_group_rule_id": "sgr-04103d868d493ee27",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.vault",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_server_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8201,
            "id": "sgrule-688387756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c564731a76b96c6f",
            "security_group_rule_id": "sgr-0f51a37df90c71920",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8201,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.vault",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0049264825573e079",
            "arn": "arn:aws:ec2:eu-central-1:686255952373:elastic-ip/eipalloc-0049264825573e079",
            "association_id": "eipassoc-05f4b37c5c8b32255",
            "domain": "vpc",
            "id": "eipalloc-0049264825573e079",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07a0f3b774bf5b72b",
            "private_dns": "ip-10-0-131-196.eu-central-1.compute.internal",
            "private_ip": "10.0.131.196",
            "public_dns": "ec2-52-57-12-87.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.12.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:network-acl/acl-0ac571b59c1aec354",
            "default_network_acl_id": "acl-0ac571b59c1aec354",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ac571b59c1aec354",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "686255952373",
            "subnet_ids": [
              "subnet-01dfe72b26a280af7",
              "subnet-024cee6e3a97b9ac3",
              "subnet-05d21b7934d74e428",
              "subnet-05fd3f124c539fc15",
              "subnet-07bd5c9ccf05380af",
              "subnet-0c69f42d43ae6d227"
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:route-table/rtb-02e5b8b0378e5a4b2",
            "default_route_table_id": "rtb-02e5b8b0378e5a4b2",
            "id": "rtb-02e5b8b0378e5a4b2",
            "owner_id": "686255952373",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-00f157aa79ed6d2a5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00f157aa79ed6d2a5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:internet-gateway/igw-05c90f16daed76fe2",
            "id": "igw-05c90f16daed76fe2",
            "owner_id": "686255952373",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0049264825573e079",
            "association_id": "eipassoc-05f4b37c5c8b32255",
            "connectivity_type": "public",
            "id": "nat-08949d3ff8d6a0d25",
            "network_interface_id": "eni-07a0f3b774bf5b72b",
            "private_ip": "10.0.131.196",
            "public_ip": "52.57.12.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05fd3f124c539fc15",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012d7a99e4d51ec251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08949d3ff8d6a0d25",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012d7a99e4d51ec25",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c90f16daed76fe2",
            "id": "r-rtb-0c716c43b961595991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c716c43b96159599",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:route-table/rtb-012d7a99e4d51ec25",
            "id": "rtb-012d7a99e4d51ec25",
            "owner_id": "686255952373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08949d3ff8d6a0d25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:route-table/rtb-0c716c43b96159599",
            "id": "rtb-0c716c43b96159599",
            "owner_id": "686255952373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c90f16daed76fe2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fff46cb27b7efdc",
            "route_table_id": "rtb-012d7a99e4d51ec25",
            "subnet_id": "subnet-0c69f42d43ae6d227"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e437b761d6d19a6d",
            "route_table_id": "rtb-012d7a99e4d51ec25",
            "subnet_id": "subnet-024cee6e3a97b9ac3"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0604bc44a1ecdd0e9",
            "route_table_id": "rtb-012d7a99e4d51ec25",
            "subnet_id": "subnet-05d21b7934d74e428"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011ebcf776fa222a2",
            "route_table_id": "rtb-0c716c43b96159599",
            "subnet_id": "subnet-05fd3f124c539fc15"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0851c3533c746c93f",
            "route_table_id": "rtb-0c716c43b96159599",
            "subnet_id": "subnet-07bd5c9ccf05380af"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5c9afababeb9ae6",
            "route_table_id": "rtb-0c716c43b96159599",
            "subnet_id": "subnet-01dfe72b26a280af7"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-0c69f42d43ae6d227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c69f42d43ae6d227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-024cee6e3a97b9ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024cee6e3a97b9ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-05d21b7934d74e428",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d21b7934d74e428",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-05fd3f124c539fc15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fd3f124c539fc15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-07bd5c9ccf05380af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bd5c9ccf05380af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-01dfe72b26a280af7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dfe72b26a280af7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0479d6d0d7bdce046"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc/vpc-0479d6d0d7bdce046",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac571b59c1aec354",
            "default_route_table_id": "rtb-02e5b8b0378e5a4b2",
            "default_security_group_id": "sg-00f157aa79ed6d2a5",
            "dhcp_options_id": "dopt-0ecab6ada59463a0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0479d6d0d7bdce046",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e5b8b0378e5a4b2",
            "owner_id": "686255952373",
            "tags": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod1",
              "Name": "prism1-prod1",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}